--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "browser-sync": "^2.18.13",
     "gulp": "^3.9.1",
     "gulp-gh-pages": "^0.5.4",
-    "harp": "^0.25.0"
+    "gulp-imagemin": "^4.0.0",
+    "gulp-shell": "^0.6.3",
+    "harp": "^0.25.0",
+    "imagemin-jpeg-recompress": "^5.1.0"
   },
   "dependencies": {}
 }
