--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-gh-pages": "^0.5.4",
     "gulp-imagemin": "^4.0.0",
+    "gulp-rev": "^8.1.0",
     "gulp-shell": "^0.6.3",
     "gulp-uglify": "^3.0.0",
     "harp": "^0.25.0",
