--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "homepage": "https://bitbucket.org/par-ker/harpsite#readme",
   "devDependencies": {
     "browser-sync": "^2.18.13",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
+    "gulp-changed": "^3.1.1",
     "gulp-clean-css": "^3.9.0",
     "gulp-concat": "^2.6.1",
     "gulp-gh-pages": "^0.5.4",
