--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "gulp-concat": "^2.6.1",
     "gulp-gh-pages": "^0.5.4",
     "gulp-imagemin": "^4.0.0",
+    "gulp-responsive": "^2.8.0",
     "gulp-rev": "^8.1.0",
     "gulp-shell": "^0.6.3",
     "gulp-uglify": "^3.0.0",
+    "imagemin-giflossy": "^5.1.10",
     "imagemin-jpeg-recompress": "^5.1.0"
   },
   "dependencies": {
