--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/par-ker/harpsite#readme",
   "devDependencies": {
+    "autoprefixer": "^7.2.5",
     "browser-sync": "^2.18.13",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
@@ -19,12 +20,15 @@
     "gulp-concat": "^2.6.1",
     "gulp-gh-pages": "^0.5.4",
     "gulp-imagemin": "^4.0.0",
+    "gulp-postcss": "^7.0.1",
     "gulp-responsive": "^2.8.0",
     "gulp-rev": "^8.1.0",
     "gulp-shell": "^0.6.3",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
     "imagemin-giflossy": "^5.1.10",
-    "imagemin-jpeg-recompress": "^5.1.0"
+    "imagemin-jpeg-recompress": "^5.1.0",
+    "precss": "^3.1.0"
   },
   "dependencies": {
     "express": "^4.16.2",
